@@ -21,32 +21,43 @@ distribution package: </p>
 
 <ul>
 
-<li> Update the <tt>NEWS</tt> file with an appropriate information including
-what has changed since the previous release. Then commit the changes into
-the CVS. </li>
+<li> Update <tt>NEWS</tt> and <tt>ChangeLog</tt> files with appropriate
+  information including what has changed since the previous release. Then
+  commit the changes into the SVN repository. </li>
 
-<li> Tag CVS sources with the release name, e.g.:<br>
-<code>% cvs tag release-3-8-0-rc1</code> </li>
-
-<li> Check out a clean working copy using the release tag:<br>
-<code>% cvs -d :ext:your_login@cvs.sourceforge.net:/cvsroot/itpp checkout -r release-3-8-0-rc1 -d itpp-3.8.0-rc1 itpp</code>
+<li> Create a release tag by copying the source tree to be released to the
+  tags subdirectory in the SVN repository, e.g.:<br>
+<code>% svn copy https://svn.sourceforge.net/svnroot/itpp/itpp/trunk https://svn.sourceforge.net/svnroot/itpp/itpp/tags/release-3-10-0</code>
 </li>
 
-<li> Regenerate <tt>configure</tt>, <tt>Makefile.in</tt> and other
-autogenerated files using:<br>
+<li> Export a clean, unversioned copy of the IT++ sources using the release
+  tag:<br> 
+<code>% svn export https://svn.sourceforge.net/svnroot/itpp/itpp/tags/release-3-10-0 itpp-3.10.0</code>
+</li>
+
+<li> Regenerate the <tt>configure</tt> script and other autogenerated files
+  using:<br>
 <code>% ./autogen.sh</code><br>
-To perform this step, autoconf, automake and libtool tools has to be
+To perform this step, autoconf, automake and libtool tools have to be
 available in the system. </li>
 
-<li> Configure the updated sources:<br>
+<li> Configure the exported sources:<br>
 <code>% ./configure</code> </li>
 
-<li> Create the distribution package using the following command:<br>
+<li> Create the distribution packages using the following command:<br>
 <code>% make distcheck</code><br>
-This will configure, compile and check the package. The output package will
-be named <tt>itpp-3.8.0-rc1.tar.gz</tt>, for instance. </li>
+This will configure, compile and check the package. The output packages will
+be named <tt>itpp-3.10.0.tar.gz</tt> and <tt>itpp-3.10.0.tar.bz2</tt>, for
+instance. </li>
 
-<li> Upload the distribution package to Sourceforge: </li>
+<li> Create the documentation packages using the following commnad:<br>
+<code>% make disthtml</code><br>
+The output documentation packages will be
+named <tt>itpp-html-doc-3.10.0.tar.gz</tt>
+and <tt>itpp-html-doc-3.10.0.tar.bz2</tt>, for egzample. </li>
+
+<li> Upload the distribution and documentation packages to the SourceForge
+  server: </li>
 
 <ul>
 
@@ -58,13 +69,14 @@ be named <tt>itpp-3.8.0-rc1.tar.gz</tt>, for instance. </li>
 <li> Change remote directory to <tt>/incomming</tt>:<br>
 <code>% cd /incoming</code></li>
 
-<li> Upload the package:<br>
-<code>% mput itpp-3.8.0-rc1.tar.gz</code> </li>
+<li> Upload packages:<br>
+<code>% mput itpp*-3.10.0.tar.*</code> </li>
 
 </ul>
 
-<li> Access SourceForge file release interface and add the package. Updates
-may take 30 minutes! </li> 
+<li> Access SourceForge file release interface and add the packages.
+  Remember to fill in the Release Notes and ChangeLog parts with appropriate
+  infmormation. </li> 
 
 </ul>
 
@@ -74,13 +86,8 @@ procedure is required: </p>
 
 <ul>
 
-<li> Create a local tar.gz package with the documentation:<br>
-<code>% make disthtml</code><br>
-This should create a package named <tt>itpp-html-doc-3.8.0-rc1.tar.gz</tt>,
-for instance. </li>
-
-<li> Upload the documentation package into the SourceForge server:<br>
-<code>% scp itpp-html-doc-3.8.0-rc1.tar.gz your_login@shell.sourceforge.net:/home/groups/i/it/itpp/htdocs/doc/</code>
+<li> Upload the documentation package into the SourceForge shell server:<br>
+<code>% scp itpp-html-doc-3.10.0.tar.gz your_login@shell.sourceforge.net:/home/groups/i/it/itpp/htdocs/</code>
 </li>
 
 <li> Login into the SourceForge shell account:<br>
@@ -90,16 +97,19 @@ for instance. </li>
 <code>% cd /home/groups/i/it/itpp/htdocs</code> </li>
 
 <li> Unpack the uploaded documentation:<br>
-<code>% tar zxf doc/itpp-html-doc-3.8.0-rc1.tar.gz</code> </li>
+<code>% tar zxf itpp-html-doc-3.10.0.tar.gz</code> </li>
 
-<li> Rename the unpacked directory to <tt>3.8.0-rc1</tt>:<br>
-<code>% mv itpp-html-doc-3.8.0-rc1 3.8.0-rc1</code> </li>
+<li> Rename the unpacked directory to <tt>3.10.0</tt>:<br>
+<code>% mv itpp-html-doc-3.10.0 3.10.0</code> </li>
 
 <li> Update the <tt>latest</tt> link:<br>
-<code>% rm latest; ln -s 3.8.0-rc1 latest</code> </li>
+<code>% rm latest; ln -s 3.10.0 latest</code> </li>
 
 <li> Change the group properities of the uploaded files:<br>
-<code>% chmod -R g+w 3.8.0-rc1 doc/itpp-html-doc-3.8.0-rc1.tar.gz</code> </li>
+<code>% chmod -R g+w 3.10.0</code> </li>
+
+<li> Remove the package from the shell server:<br>
+<code>% rm itpp-html-doc-3.10.0.tar.gz</code> </li>
 
 </ul>
 
